@@ -1,3 +1,11 @@
+2012-12-14 Paulo Andrade <pcpa@gnu.org>
+
+	* include/lightning.h, lib/lightning.c: Add two extra wrapper
+	functions to avoid need for excess pointer to/from word casts.
+
+	* check/lightning.c: Only need for pointer to/from word cast
+	now is jit_movi, update accordingly.
+
 2012-12-13 Paulo Andrade <pcpa@gnu.org>
 
 	* check/varargs.ok, check/varargs.tst: New test cases implementing
